turtleart.polygon6.Polygon6.scala.error
Erreur de compilation :
Polygon6:8: error: ')' expected but '}' found.
  }
  ^